syntax = "proto3";

import "google/protobuf/Empty.proto";

package gRPCproto;

service GRPCservice {
	rpc GrpcProc (GrpcRequest) returns (GrpcResponse) {};
	rpc RepeatString (RepeatStringRequest) returns (RepeatStringReply) {};
	rpc TimeoutPrint (TimeoutPrintRequest) returns (TimeoutPrintReply) {};
}

// The request message
message GrpcRequest {
 string name = 1;
 int32 age = 2;
}

// The response message
message GrpcResponse {
 string message = 1;
 int32 days = 2;
}


message RepeatStringRequest {
	string str = 1;
	int32 num = 2;
}

message RepeatStringReply {
	string result = 1;
}

message TimeoutPrintRequest {
	int32 index = 1;
	double secs = 2;
}

message TimeoutPrintReply {
	string result = 1;
}